bin/testsuite/tests/compiler/src/errors/compiler5142.swg
#global testerror "Err0586"
func hello(v: s32, name, a, b) {
    return "hello" + name
}